festivalcontrollertest pretty good now